syntax="proto3";

package linksPackage;

service Link {
  rpc createLink(link) returns(linkId);
  rpc getLinks(noParam) returns(links);
}

message noParam {}

message link {
  int32 user_id = 1;
  string url = 2;
  string key = 3;
  int64 created_at = 4;
}

message links {
  repeated link links = 1;
}

message linkId {
  int32 link_id = 1;
}